--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - db-data:/var/lib/postgresql/data
-      - ./backend/db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
+      - ./db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
 
 volumes:
   db-data:
